--- a/todo.Web/package.json
+++ b/todo.Web/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "dayjs": "^1.11.10",
     "vue": "^3.4.21",
+    "vue-router": "^4.3.0",
     "vuetify": "^3.5.13"
   },
   "devDependencies": {
