Updates gitignore to ignore vue related items;

--- a/.gitignore
+++ b/.gitignore
@@ -411,8 +411,26 @@ obj/
 ### Vuejs ###
 # Recommended template: Node.gitignore
 
-dist/
-npm-debug.log
-yarn-error.log
+.DS_Store
+node_modules/
+/dist/
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw*
 
 # End of https://www.toptal.com/developers/gitignore/api/vuejs,csharp,dotnetcore
