Updates default theme colors; Updates DateField component; Uploads TaskPriorityField component;

--- a/todo.Web/package.json
+++ b/todo.Web/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@date-io/dayjs": "^3.0.0",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
     "sass": "^1.74.1",
